--- a/src/index.html
+++ b/src/index.html
@@ -1,9 +1,12 @@
 <!doctype html>
 <html>
-  <head>
-    <title>Getting Started</title>
-  </head>
-  <body>
-    <script src="./src/index.js"></script>
-  </body>
+
+<head>
+  <title>Getting Started</title>
+</head>
+
+<body>
+  <canvas id="c"></canvas>
+</body>
+
 </html>
