--- a/index.html
+++ b/index.html
@@ -1,1 +1,1 @@
-<!doctype html> <html> <head> <title>Getting Started</title> </head> <body> <canvas id=c></canvas> <script type="text/javascript" src="vendors~main.js"></script><script type="text/javascript" src="main.js"></script></body> </html>
+<!doctype html> <html><head><link href="main.css" rel="stylesheet"></head> </html><script type="text/javascript" src="vendors~main.js"></script><script type="text/javascript" src="main.js"></script>
